--- a/curriculo jhota.html
+++ b/curriculo jhota.html
@@ -6,7 +6,7 @@
     <body>
         <section name="infoPessoais">
             <h1>jHONATAS THOMÉ</h1>
-            <p>Brasileiro, Solteiro, 29 anos,</p>
+            <p>Brasileiro, Solteiro, 19 anos,</p>
             <p><strong>Email:</strong>thomejhonatas123@gmail.com </p>
             <p><strong>Contato:</strong>(27)998365237</p>
             <p><strong>Endereço:</strong>GALILEIA</p>
@@ -15,7 +15,7 @@
             <h2>Objetivo</h2>
             <ul>
                 <li>Trabalhar de Programador.</li>
-                <li>Ser um bom Professor.</li>
+                <li>SER UMA PESSOA DEPENDENTE.</li>
             </ul>
         </section>
     </body>
